--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,2 +1,10 @@
-/* For information on how to create your own theme, please see:
-http://ionicframework.com/docs/theming/ */
+/* File: theme/variables.css atau global.scss */
+
+/* Memaksa tema terang secara eksplisit pada BODY aplikasi Ionic */
+body {
+  /* Atur warna latar belakang utama ke putih */
+  --ion-background-color: #ffffff;
+    
+  /* PENTING: Gunakan juga properti color-scheme untuk browser */
+  color-scheme: light; 
+}
